--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" href="ICON/web.png" type="image/x-icon">
@@ -16,8 +16,8 @@
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="myprofile.html">My Profile</a></li>
-        <li><a href="login.html">Log Out</a></li>
+        <li><a href="htmlhome.html">My Profile</a></li>
+        <li><a href="index.html">Log Out</a></li>
       </ul>
      </div>
     </nav>
@@ -25,6 +25,8 @@
       <!--blog-section============================================================================-->
       <section id="blog">
         <!--blog-heading--------------->
+        <marquee style="color: red; font-size: medium;"   direction="left">Please Wait UI/Ux Work Is Going</marquee>
+
         <div class="blog-heading">
           <span>My Recent Posts</span>
           <h3>My Blog</h3>
@@ -99,7 +101,7 @@
       <span>20 November 2023 / Web Design</span>
       <a href="#" class="blog-title">What Is Bootstrap, and How Does It Work?</a>
       <p>Bootstrap is a popular framework for web developers and designers. It helps you create responsive projects and customize web features to meet your and your clients' needs. In this article, we define Bootstrap, explain how it is useful and provide steps on how to use it for your projects.</p>
-      <a href="HTML/boostraphome.html">Read More</a>
+      <a href="boostraphome.html">Read More</a>
     </div>
   </div>  
 </section>
