--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <form id="form" action="/">
-            <marquee style="color: red; font-size: medium;"   direction="left">Username:User|Password:Entriproject1</marquee>
+            <marquee style="color: red; font-size: medium;"   direction="left">|Username:User|Password:Entriproject1</marquee>
 
             <h1>Login Page</h1>
             <div class="input-control">
