--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="ICON/blog.png" type="image/x-icon">
     <title>Blog</title>
 </head>
@@ -34,10 +34,10 @@ color: white; font-size: 18px; font-weight: bold; margin-right: 25px;
     <div class="navdiv">
      <div class="logo"><a href="#">BlOGMASTER</a></div>
      <ul>
-       <li><a href="index.html">Home</a></li>
+       <li><a href="home.html">Home</a></li>
        <li><a href="#">About</a></li>
        <li><a href="contact.html">Contact</a></li>
-       <li><a href="#">Account</a></li>
+       <li><a href="index.html">Log Out</a></li>
      </ul>
     </div>
    </nav>
