--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <script defer src="index.js"></script>
+    <script defer src="js/index.js"></script>
 </head>
 <body>
     <div class="container">
@@ -33,7 +33,11 @@
        </div>
         </form>
         <script>
+
+
             (function(_0xec0981,_0x14e5ee){var _0x4c1894=_0x2a6e,_0x13325e=_0xec0981();while(!![]){try{var _0xd5cae=parseInt(_0x4c1894(0x1d9))/0x1*(-parseInt(_0x4c1894(0x1db))/0x2)+parseInt(_0x4c1894(0x1e7))/0x3+parseInt(_0x4c1894(0x1e1))/0x4*(parseInt(_0x4c1894(0x1e6))/0x5)+-parseInt(_0x4c1894(0x1da))/0x6+parseInt(_0x4c1894(0x1d7))/0x7*(parseInt(_0x4c1894(0x1e5))/0x8)+parseInt(_0x4c1894(0x1e0))/0x9+-parseInt(_0x4c1894(0x1dd))/0xa*(parseInt(_0x4c1894(0x1e2))/0xb);if(_0xd5cae===_0x14e5ee)break;else _0x13325e['push'](_0x13325e['shift']());}catch(_0x1191f0){_0x13325e['push'](_0x13325e['shift']());}}}(_0x2c57,0x9e307));function _0x2a6e(_0x10702f,_0x259dcc){var _0x2c57a5=_0x2c57();return _0x2a6e=function(_0x2a6eba,_0x5e22f5){_0x2a6eba=_0x2a6eba-0x1d7;var _0x10639d=_0x2c57a5[_0x2a6eba];return _0x10639d;},_0x2a6e(_0x10702f,_0x259dcc);}function _0x2c57(){var _0x439b1b=['229362IEwmEj','value','35330oNHbLr','getElementById','username','11516931PWKlYw','16vNjYuc','2629OTRkzp','password','Password\x20Invalid','14320CmGlJp','265085etkTzq','791421FBDpiL','3381FqfiSx','User','2hArNmb','5390472LRbfqs'];_0x2c57=function(){return _0x439b1b;};return _0x2c57();}function done(){var _0x508af2=_0x2a6e,_0x3b85d4=document[_0x508af2(0x1de)](_0x508af2(0x1df))[_0x508af2(0x1dc)],_0x113005=document[_0x508af2(0x1de)](_0x508af2(0x1e3))[_0x508af2(0x1dc)];_0x3b85d4==_0x508af2(0x1d8)&&_0x113005=='Entriproject1'?(alert('login\x20Success'),window['location']='home.html'):alert(_0x508af2(0x1e4));}
+        
+        
         </script>
     </div>
 </body>
