--- a/reg.html
+++ b/reg.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index1.css">
-    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="css/index1.css" >
+    <script defer src="js/index.js"></script>
 </head>
 <body>
     <div class="container">
@@ -46,23 +46,17 @@
             <div class="input-control">
                 <label for="password">Password</label>
                 <input id="password"name="password" type="password" placeholder="Password">
-                <div class="error"></div>
+                <p id="message">Password is <span id="strength"></span></p>
+
             </div>
             <div class="input-control">
                 <label for="password2">Confirm Password</label>
                 <input id="password2"name="password2" type="password" placeholder="Confirm Password">
                 <div class="error"></div>
             </div>
-            <button   onclick="done()"  id="btn"  type="submit">Sign Up</button>
+            <button id="btn"  type="submit">Sign Up</button>
         </form>
-        <script>
-             function done()
-             {  
-                 alert("If Input Box Green Your Data Valid Go To login Page Otherwise Not Valid ");
-                }
-
-              
-        </script>
+        
     </div>
 </body>
 </html>
