--- a/reg.html
+++ b/reg.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index1.css" >
+    <link rel="stylesheet" href="index1.css" >
     <script defer src="js/index.js"></script>
 </head>
 <body>
