--- a/reg.html
+++ b/reg.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index1.css" >
-    <script defer src="js/index.js"></script>
+    <script defer src="index.js"></script>
 </head>
 <body>
     <div class="container">
