--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input id="password"name="password" type="password" placeholder="Password" >
                 <div class="error"></div>
              
-            <button  onclick="done()"    type="submit">Sign In</button>
+            <button  onclick="done()" >Sign In</button>
        <div class="sigin">
              <a id = "a"  href="reg.html">Sign Up</a>
        </div>
