--- a/myprofile.html
+++ b/myprofile.html
@@ -68,10 +68,10 @@ color: white; font-size: 18px; font-weight: bold; margin-right: 25px;
     <div class="navdiv">
      <div class="logo"><a href="#">BlOGMASTER</a></div>
      <ul>
-       <li><a href="index.html">Home</a></li>
+       <li><a href="home.html">Home</a></li>
        <li><a href="#">About</a></li>
        <li><a href="contact.html">Contact</a></li>
-       <li><a href="#">Account</a></li>
+       <li><a href="myprofile.html">Account</a></li>
      </ul>
     </div>
    </nav>
